# emtm-verify

./: .gitignore  Cargo.toml  README.md
examples/: hash.rs  verify.rs
src/: lib.rs  verifier.rs
