[package]
name = "emtm-verify"
version = "0.1.0"
authors = ["Miguel Chan <vvchan@outlook.com>"]
edition = "2018"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
openssl-probe = "0.1.2"
actix-web = {version = "1.0.0", features = ["ssl", "client"] }
actix-rt = "0.2.2"
futures = "0.1.25"
serde = "1.0"
serde_json = "1.0"
dotenv = "0.9.0"
log = "0.4.6"
pretty_env_logger = "0.3.0"
md-5 = "0.8.0"
rand = "0.6.5"
hex = "0.3.2"
chrono = "0.4.6"
base64 = "0.10.1"
image = "0.21.1"

